Fix possible issue with content not filling available space

--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -11,6 +11,16 @@ body,
   padding: 0;
 }
 
+html {
+  @apply bg-gray-900;
+}
+
+#app {
+  @apply h-full;
+}
+
+
 img {
   @apply mx-auto rounded-lg my-2;
 }
+
